[package]
name = "os"
version = "0.1.0"
authors = ["mrtan <freemrtan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
algorithm = { path = 'src/algorithm' }
spin = "0.7.1"
bitflags = "1.2.1"
bit_field = "0.10.1"